--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,13 @@
         "laravel/sanctum": "^2.6",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
+        "league/flysystem": "^1.1",
         "league/flysystem-aws-s3-v3": "~1.0",
         "league/flysystem-sftp": "~1.0",
         "livewire/livewire": "^2.0",
         "maatwebsite/excel": "^3.1",
+        "nao-pon/flysystem-google-drive": "*",
+        "spatie/laravel-backup": "^7.8",
         "stripe/stripe-php": "^7.75",
         "unicodeveloper/laravel-paystack": "^1.0",
         "vrajroham/laravel-bitpay": "^4.0"
